# bugsbugger

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bugsbugger-implementation-plan.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
bugsbugger/: __init__.py  config.py  main.py
bugsbugger/bot/: callbacks.py  conversations.py  edit_handlers.py  formatters.py  handlers.py  keyboards.py  stats.py
bugsbugger/db/: migrations.py  models.py  repository.py  schema.sql
bugsbugger/engine/: __init__.py  escalation.py  nag_engine.py  recurrence.py
bugsbugger/parser/: __init__.py  nlp.py  normalizer.py  patterns.py
bugsbugger/utils/: constants.py  error_handler.py  time_utils.py
tests/: __init__.py  test_escalation.py  test_time_utils.py
